tds/gemfire/cluster/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: gemfire-redis
  namespace: gemfire-cluster
spec:
  selector:
    app: gemfire1-server
  type: LoadBalancer
  ports:
    - name: redis
      port: 11211
