tds/gemfire/cluster/virtualservice-redis.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: redis
  namespace: gemfire-cluster
spec:
  hosts:
    - redis.ingress.lab.home
  gateways:
    - app-gateway.istio-system.svc.cluster.local
  tcp:
  - match:
    - port: 11211
    route:
    - destination:
        host: gemfire-redis.gemfire-cluster.svc.cluster.local
        port:
          number: 11211
